fixed the alignment of the nav

--- a/assets/_sass/_navbar.scss
+++ b/assets/_sass/_navbar.scss
@@ -69,6 +69,7 @@ $nav-item-border: darken($navbar-default-bg, 8%);
 
     .menu-row {
       background-color: transparent;
+      padding: 0 5px;
 
       &:not(.open) {
         &:hover {
@@ -336,6 +337,26 @@ $nav-item-border: darken($navbar-default-bg, 8%);
           display: block;
         }
 
+        &.level-1 {
+          padding-left: 0;
+        }
+
+        &[class^='level-']:has(+ ul) {
+          padding-left: 20px;
+        }
+
+        &[class^='level-']:has(a > .menu-expander) {
+          padding-left: 20px;
+        }
+
+        &[class^='level-']:has(a > div:not(.menu-title)) {
+          padding-left: 0;
+        }
+
+        &:not(.level-1) {
+          padding-left: 25px;
+        }
+
         .article-navbar-options {
           margin-top: auto;
           margin-bottom: auto;
@@ -398,7 +419,6 @@ $nav-item-border: darken($navbar-default-bg, 8%);
 
       .menu-expander {
         margin-left: -25px;
-        padding-left: 10px;
 
         .glyphicon {
           margin-right: 6px;
